Resolve subscription count discrepancies by aligning query logic, disabling caching, and standardizing date ranges. Updated API endpoints to ensure consistent subscription counts across Behavioral Insights and Active Subscriptions sections. Added tests to verify the fixes and ensure data integrity.

--- a/web/static/index.html
+++ b/web/static/index.html
@@ -82,7 +82,12 @@
 
             <!-- Your Plan (Education) -->
             <div id="planSection" class="section" style="display: none;">
-                <h2>📚 Your Plan</h2>
+                <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+                    <h2 style="margin: 0;">📚 Your Plan</h2>
+                    <button id="showAIOptionsBtn" onclick="showAIConsentSection()" class="ai-options-btn" style="display: none;">
+                        🤖 Enable AI Recommendations
+                    </button>
+                </div>
                 <div id="educationList" class="recommendations-list"></div>
             </div>
 
